tests/errors/return_from_init.efto
// Cannot return a value from init.
class Foo {
  init() {
    return "bad"; // expect error: [line 4] Error at 'return': Can't return a value from an initializer.
  }
}
